Fixed some minor spelling errors. Changed the publication scripts to be more easily uploadable.

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Resources.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Resources.resx
@@ -160,7 +160,8 @@ Please perform this action first on a single spectrum, so that
 the choosed settings can be saved.</value>
   </data>
   <data name="SmoothingDescription_AdjacentAverage" xml:space="preserve">
-    <value>Takes the simple average value between the given number of adjacent datapoints. This filter often boadens and dereases the height of sharp features. E.g. for Kondo-resonances, you should chose a different one.</value>
+    <value>Takes the simple average value between the given number of adjacent datapoints.
+This filter often flattens the height and width of sharp features. E.g., for Kondo-resonances you should chose a different method.</value>
   </data>
   <data name="SmoothingMethod_AdjacentAverage" xml:space="preserve">
     <value>Adjacent Average</value>
@@ -174,9 +175,9 @@ the choosed settings can be saved.</value>
   <data name="SmoothingDescription_SavitzkyGolay" xml:space="preserve">
     <value>The Savitzky–Golay smoothing filter is a type of filter first described in 1964 by Abraham Savitzky and Marcel J. E. Golay.
 
-The Savitzky–Golay method essentially performs a local polynomial regression (of degree k) on a series of values (of at least k+1 points which are treated as being equally spaced in the series) to determine the smoothed value for each point.
+The Savitzky–Golay method performs a local polynomial regression on a series of values to determine the smoothed value for each point.
 
-The main advantage of this approach is that it tends to preserve features of the distribution such as relative maxima, minima and width, which are usually 'flattened' by other adjacent averaging techniques.</value>
+Its main advantage is that it preserve sharp features of the source data, such as relative maxima, minima and the width of these features.</value>
   </data>
   <data name="SmoothingMethod_SavitzkyGolay" xml:space="preserve">
     <value>Savitzky Golay</value>
