--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/SpectroscopyTable/rSpectroscopyTableViewer.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/SpectroscopyTable/rSpectroscopyTableViewer.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InfobarTemplate_MultipleFiles" xml:space="preserve">
+    <value>plot of %n files</value>
+  </data>
+  <data name="InfobarTemplate_SingleFile" xml:space="preserve">
+    <value>%f</value>
+  </data>
   <data name="SelectionMode_DataPoint" xml:space="preserve">
     <value>click to select a datapoint, ESC to cancel</value>
   </data>
