--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/Spectroscopy Data Treatment/Renormalization/wDataRenormalizationByParameters.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/Spectroscopy Data Treatment/Renormalization/wDataRenormalizationByParameters.resx
@@ -126,10 +126,19 @@
         ZW1zBV9zaXplCF92ZXJzaW9uBgAACAgCAAAACQMAAAAAAAAAAAAAABEDAAAAAAAAAAs=
 </value>
   </data>
+  <data name="csSourceColumn.SelectedEntries" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAJoBbXNjb3JsaWIsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1u
+        ZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5XV0sIG1zY29ybGliLCBWZXJzaW9u
+        PTQuMC4wLjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjc3YTVjNTYxOTM0ZTA4OQUB
+        AAAAMFN5c3RlbS5Db2xsZWN0aW9ucy5HZW5lcmljLkxpc3RgMVtbU3lzdGVtLlN0cmluZwMAAAAGX2l0
+        ZW1zBV9zaXplCF92ZXJzaW9uBgAACAgCAAAACQMAAAAAAAAAAAAAABEDAAAAAAAAAAs=
+</value>
+  </data>
   <data name="lblDescription.Text" xml:space="preserve">
-    <value>This tool allows you to regauge dI/dV data (or higher derivatives) that has been recorded using a lock-in amplifier.
-Choose this tool over the numeric derivative re-gauging procedure if you have written down all data acuisition parameters,
-such as lock-in sensitivity, modulation amplitude, or current-amplifier gain. This procedure is more accurate and reliable!</value>
+    <value>This tool allows you to re-calculate the physical units of dI/dV data measured with a lock-in amplifier.
+Choose this tool over the re-gauging procedure that uses the numeric derivative if you know all lock-in parameters,
+such as lock-in sensitivity, modulation amplitude, and current-amplifier gain.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
