--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/FolderBrowser/rFolderBrowser.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/FolderBrowser/rFolderBrowser.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error_PathInvalid" xml:space="preserve">
+    <value>The path you entered is invalid!
+Please check and try again.</value>
+  </data>
+  <data name="Error_PathInvalid_Title" xml:space="preserve">
+    <value>invalid path</value>
+  </data>
   <data name="FolderCount_FolderEmpty" xml:space="preserve">
     <value>no items in current folder</value>
   </data>
