- Nanonis Grid Importer almost finished. - Changed all import routines to use the "Using" statement for the streams!

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/ImportMethods/rFileImport.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/ImportMethods/rFileImport.resx
@@ -134,6 +134,10 @@ message:
   <data name="FileImport_WritingCacheFile" xml:space="preserve">
     <value>writing cache file ...</value>
   </data>
+  <data name="GridFile_MeasurementDimensions" xml:space="preserve">
+    <value>width: %dimx
+height: %dimy</value>
+  </data>
   <data name="ScanImage_MeasurementDimensions" xml:space="preserve">
     <value>%xp x %yp
 %spc, %spbV</value>
