--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/SplashAbout/wSplash.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/SplashAbout/wSplash.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="lblHint.Text" xml:space="preserve">
+    <value>This open source software is distributed free of charge under
+the terms of the GNU Lesser General Public License v3.
+
+If it contributes to your scientific work, please cite:
+
+M. Ruby, SoftwareX ???, ??? (2016)
+DOI: 10.1016/j.softx.2016.04.001</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
