--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/DataBrowser/mDataBrowserList.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/DataBrowser/mDataBrowserList.resx
@@ -132,4 +132,7 @@
   <metadata name="cmScanImageFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>449, 17</value>
   </metadata>
+  <metadata name="cmGridFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>606, 17</value>
+  </metadata>
 </root>
