--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/ScanImage/mScanImageViewer.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/WindowModules/ScanImage/mScanImageViewer.resx
@@ -132,4 +132,7 @@
         ZW1zBV9zaXplCF92ZXJzaW9uBgAACAgCAAAACQMAAAAAAAAAAQAAABEDAAAAAQAAAAoL
 </value>
   </data>
+  <metadata name="ttToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>337, 14</value>
+  </metadata>
 </root>
