--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Resources.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/My Project/Resources.resx
@@ -987,4 +987,7 @@ If the initialization of GPU computing fails, SpectraFox will always fall back t
   <data name="SpectraFoxPaperURL" xml:space="preserve">
     <value>http://dx.doi.org/10.1016/j.softx.2016.04.001</value>
   </data>
+  <data name="gridfile_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gridfile_preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
