[bugfix] the last used filter is now stored correctly published version 2016.08.17

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/SplashAbout/wAbout.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/Windows/SplashAbout/wAbout.resx
@@ -123,7 +123,7 @@ the terms of the GNU Lesser General Public License v3.
 
 If it contributes to your scientific work, please cite:
 
-M. Ruby, SoftwareX ???, ??? (2016)
+M. Ruby, SoftwareX (2016), in press
 DOI: 10.1016/j.softx.2016.04.001</value>
   </data>
 </root>
