[improved] the cache file is now stored in a background thread, not blocking the UI-thread anymore [improved] the cache file is now stored in a compressed way (spectrafox.sfcc) [improved] the spectroscopy file viewer has now a new tab showing all header properties [import] Nanonis files compatibility increased [export] IGOR wave file

--- a/sourcecode/SpectroscopyManager/SpectroscopyManager/Export/ExportMethods/rExportMethods.resx
+++ b/sourcecode/SpectroscopyManager/SpectroscopyManager/Export/ExportMethods/rExportMethods.resx
@@ -123,6 +123,9 @@ various programs.
 
 The value format depends on the choosen selection.</value>
   </data>
+  <data name="ExportTypeDesc_IGORWave" xml:space="preserve">
+    <value>IGOR wave compatible format</value>
+  </data>
   <data name="ExportTypeDesc_Mathematica" xml:space="preserve">
     <value>File contains a table in Mathematica syntax.
 
@@ -149,6 +152,9 @@ The value format depends on the choosen selection.</value>
   </data>
   <data name="ExportTypeName_CSV" xml:space="preserve">
     <value>Comma-separated values</value>
+  </data>
+  <data name="ExportTypeName_IGORWave" xml:space="preserve">
+    <value>IGOR wave file</value>
   </data>
   <data name="ExportTypeName_Mathematica" xml:space="preserve">
     <value>Mathematica Notebook</value>
